--- a/05-cars/assets/css/style.css
+++ b/05-cars/assets/css/style.css
@@ -1,3 +1,10 @@
+
 body {
-    background-color: gray;
+
+    background-image: url("/assets/images/background.jpeg");
+};
+ 
+.card {
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
